# freemocap-web

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  pyproject.toml
src/freemocap_web/: __init__.py  app.py
src/freemocap_web/static/: app.js  calibration3d.js  design-system.css  design-system.html  index.html  pose3d.js  styles.css
