[project]
name = "freemocap-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "AGPL-3.0-only"
authors = [
    { name = "Kapil Reddy", email = "reddy.kapil@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.136.1",
    "freemocap==1.8.2",
    "python-multipart>=0.0.27",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
freemocap-web = "freemocap_web:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
